// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-undefined"
  id="default"
  rel="noopener noreferrer"
  target="_self"
>
   undefined
</a>
`;

exports[`Render properties.disabled - value[0] 1`] = `
.emotion-0 {
  color: #BEBEBE;
  cursor: not-allowed;
}

<span
  class="emotion-0"
  id="properties.disabled"
>
   disabled
</span>
`;

exports[`Render properties.href - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-https://lowdefy.com"
  href="https://lowdefy.com"
  id="properties.href"
  rel="noopener noreferrer"
  target="_self"
>
   properties.href
</a>
`;

exports[`Render properties.href and rel - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-https://lowdefy.com"
  href="https://lowdefy.com"
  id="properties.href and rel"
  rel="noopener"
  target="_self"
>
   properties.href and rel
</a>
`;

exports[`Render properties.href and target - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-/Button"
  href="/Button"
  id="properties.href and target"
  rel="noopener noreferrer"
  target="_blank"
>
   To Button
</a>
`;

exports[`Render properties.href, title and target - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-https://lowdefy.com"
  href="https://lowdefy.com"
  id="properties.href, title and target"
  rel="noopener noreferrer"
  target="_blank"
>
   New tab Website
</a>
`;

exports[`Render properties.icon and properties.title - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.icon and properties.title"
  rel="noopener noreferrer"
  target="_self"
>
  <svg
    class="emotion-1"
    data-testid="AiOutlineExclamationCircle"
    id="properties.icon and properties.title_icon"
  />
   This is the anchor title
</a>
`;

exports[`Render properties.icon object - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.icon object"
  rel="noopener noreferrer"
  target="_self"
>
  <svg
    class="emotion-1"
    data-testid="AiOutlineExclamationCircle"
    id="properties.icon object_icon"
  />
   Click here
</a>
`;

exports[`Render properties.icon string - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.icon string"
  rel="noopener noreferrer"
  target="_self"
>
  <svg
    class="emotion-1"
    data-testid="AiOutlineExclamationCircle"
    id="properties.icon string_icon"
  />
   undefined
</a>
`;

exports[`Render properties.icon, properties.title and properties.disabled - value[0] 1`] = `
.emotion-0 {
  color: #BEBEBE;
  cursor: not-allowed;
}

<span
  class="emotion-0"
  id="properties.icon, properties.title and properties.disabled"
>
  <svg
    class="emotion-1"
    data-testid="AiOutlineExclamationCircle"
    id="properties.icon, properties.title and properties.disabled_icon"
  />
   This is the anchor title
</span>
`;

exports[`Render properties.strong - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.strong"
  rel="noopener noreferrer"
  target="_self"
>
  <b>
     Strong
  </b>
</a>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  color: green!important;
  font-size: 18px;
}

<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.style"
  rel="noopener noreferrer"
  target="_self"
>
   Click here
</a>
`;

exports[`Render properties.style with icon - value[0] 1`] = `
.emotion-0 {
  color: green!important;
  font-size: 8px;
}

<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.style with icon"
  rel="noopener noreferrer"
  target="_self"
>
  <svg
    class="emotion-1"
    data-testid="AiOutlineExclamationCircle"
    id="properties.style with icon_icon"
  />
   Click here
</a>
`;

exports[`Render properties.title - value[0] 1`] = `
<a
  class="emotion-0"
  data-testid="link-undefined"
  id="properties.title"
  rel="noopener noreferrer"
  target="_self"
>
   Anchor title
</a>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.disabled 1`] = `true`;

exports[`Test Schema properties.disabled 2`] = `null`;

exports[`Test Schema properties.href 1`] = `true`;

exports[`Test Schema properties.href 2`] = `null`;

exports[`Test Schema properties.href and rel 1`] = `true`;

exports[`Test Schema properties.href and rel 2`] = `null`;

exports[`Test Schema properties.href and target 1`] = `true`;

exports[`Test Schema properties.href and target 2`] = `null`;

exports[`Test Schema properties.href, title and target 1`] = `true`;

exports[`Test Schema properties.href, title and target 2`] = `null`;

exports[`Test Schema properties.icon and properties.title 1`] = `true`;

exports[`Test Schema properties.icon and properties.title 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.icon, properties.title and properties.disabled 1`] = `true`;

exports[`Test Schema properties.icon, properties.title and properties.disabled 2`] = `null`;

exports[`Test Schema properties.strong 1`] = `true`;

exports[`Test Schema properties.strong 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;

exports[`Test Schema properties.style with icon 1`] = `true`;

exports[`Test Schema properties.style with icon 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
